--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.4.0",
     "@clerk/nextjs": "^5.7.5",
     "clsx": "^2.1.1",
     "next": "14.2.15",
